# multicontact-locomotion-planning

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.docker/: Dockerfile  auto-install-hpp.sh  auto-install-locomote.sh  starthpp
momentumopt_configs/: cfg_softConstraints_anymal.yaml  cfg_softConstraints_anymal_kinOrientation.yaml  cfg_softConstraints_anymal_sidesteps.yaml  cfg_softConstraints_hrp2.yaml  cfg_softConstraints_solo.yaml  cfg_softConstraints_solo_lowgoal.yaml  cfg_softConstraints_talos.yaml  cfg_softConstraints_talos_eff9.yaml  cfg_softConstraints_talos_eff95.yaml  cfg_softConstraints_talos_lowgoal.yaml  cfg_softConstraints_timeopt_talos.yaml  default_solver_setting.yaml
python/: CMakeLists.txt  load_motion_from_files.py
python/mlp/: __init__.py  __main__.py  config.py  loco_planner.py  loco_planner_horizon.py  loco_planner_reactive.py
scripts/: load_motion_from_files.py  loco_planner.py  run_from_cscom.py  run_locomote.py  run_mlp.py
scripts/hpp_wholebody_motion/: centroidal_timeopt.py  config.py  display_tools.py  end_effectors_traj.py  generate_contact_sequence.py  whole_body.py
scripts/mlp/: config.py  loco_planner.py
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt  generate_examples.py  test_talos_stairs_manual_limb_rrt.py  test_talos_stairs_sl1m_mopt.py  test_talos_walk_rbprm_mopt.py  test_talos_walk_sl1m_mopt_dyn_filter.py  utils.py  (+3 more)
timeOpt_configs/: cfg_softConstraints_anymal.yaml  cfg_softConstraints_anymal_kinOrientation.yaml  cfg_softConstraints_anymal_sidesteps.yaml  cfg_softConstraints_hrp2.yaml  cfg_softConstraints_hyq.yaml  cfg_softConstraints_talos.yaml  cfg_softConstraints_talos_arms.yaml  cfg_softConstraints_talos_eff9.yaml  cfg_softConstraints_talos_kinConstraints.yaml  cfg_softConstraints_talos_rarm.yaml
(+209 files in other folders)
